# 2dmine

./: .gitmodules
game/elgarenta/: CMakeLists.txt
game/elgarenta/include/: elgarenta.h  screen.h  test.h  window.h
game/elgarenta/src/: screen.c  test.c  window.c
